# Game-Agent-Studio

./: README.md  index.html  opencode.json  package-lock.json  package.json
.workbuddy/memory/: 2026-06-23.md
docs/: V1_RELEASE_CHECKLIST.md  V1_SECURITY_REVIEW.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agents.rs  embedding.rs  events.rs  exports.rs  iterations.rs  memory.rs  mod.rs  model_configs.rs  projects.rs  rag.rs  security.rs  workflow.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: init.rs  migrations.rs
src-tauri/src/models/: mod.rs
src/app/components/: Layout.tsx  Sidebar.tsx
src/app/routes/: AgentWorkspace.tsx  ExportCenter.tsx  KnowledgeBase.tsx  MemoryCenter.tsx  ModelSettings.tsx  ProjectDashboard.tsx  SelfIterationPanel.tsx
src/app/stores/: useAgentStore.ts  useAppStore.ts  useModelStore.ts  useProjectStore.ts
src/app/styles/: global.css
src/features/workflows/: .gitkeep
src/shared/constants/: index.ts
src/shared/i18n/: index.tsx  translations.ts
src/shared/types/: index.ts
src/shared/utils/: tauri.ts
tools/: ocr_server.py
