[package]
name = "buildgameagent"
version = "0.1.0"
edition = "2021"

[lib]
name = "buildgameagent_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
hostname = "0.4"
regex-lite = "0.1"
